Kernel/Graphics: Split Bochs functionality to new DisplayConnector class
Instead of putting all the modesetting functionality into one class,
let's put it in two different classes which represent display connector.

This leads to a much nicer code and increasing clarity about when we use
IO ports or memory mapped registers to control the Bochs display
registers. It also much more clear that we use IO ports for supporting
Virtual Box graphics adapter and memory mapped registers for QEMU/Bochs
graphics adapter.

Also, this change actually enforces better error propagation when trying
to modeset or doing other graphical operations.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -74,7 +74,9 @@ set(KERNEL_SOURCES
     Devices/HID/PS2MouseDevice.cpp
     Devices/HID/VMWareMouseDevice.cpp
     GlobalProcessExposed.cpp
+    Graphics/Bochs/DisplayConnector.cpp
     Graphics/Bochs/GraphicsAdapter.cpp
+    Graphics/Bochs/VBoxDisplayConnector.cpp
     Graphics/Console/BootFramebufferConsole.cpp
     Graphics/Console/GenericFramebufferConsole.cpp
     Graphics/Console/ContiguousFramebufferConsole.cpp
