--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -84,6 +84,8 @@ set(KERNEL_SOURCES
     Graphics/Console/VGAConsole.cpp
     Graphics/GraphicsManagement.cpp
     Graphics/Intel/DisplayConnectorGroup.cpp
+    Graphics/Intel/DisplayPlane.cpp
+    Graphics/Intel/DisplayTranscoder.cpp
     Graphics/Intel/GMBusConnector.cpp
     Graphics/Intel/NativeDisplayConnector.cpp
     Graphics/Intel/NativeGraphicsAdapter.cpp
