--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -85,6 +85,8 @@ set(KERNEL_SOURCES
     Graphics/DisplayConnector.cpp
     Graphics/GraphicsManagement.cpp
     Graphics/Intel/DisplayConnectorGroup.cpp
+    Graphics/Intel/DisplayPlane.cpp
+    Graphics/Intel/DisplayTranscoder.cpp
     Graphics/Intel/GMBusConnector.cpp
     Graphics/Intel/NativeDisplayConnector.cpp
     Graphics/Intel/NativeGraphicsAdapter.cpp
