--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -88,6 +88,7 @@ set(KERNEL_SOURCES
     Graphics/Intel/Transcoder/DisplayTranscoder.cpp
     Graphics/Intel/DisplayConnectorGroup.cpp
     Graphics/Intel/DisplayPlane.cpp
+    Graphics/Intel/DisplayPortAuxiliaryConnector.cpp
     Graphics/Intel/GMBusConnector.cpp
     Graphics/Intel/NativeDisplayConnector.cpp
     Graphics/Intel/NativeGraphicsAdapter.cpp
