Kernel/Graphics: Introduce virtual memory concepts in the Intel driver
Modern Intel graphics chipset utilize virtual memory views to coordinate
DMA and 3D operations on the GPU. For now, as we support only Gen4 chips
we don't really care about making the actual mapping operations as Gen4
chips don't require that.
Later on, on more modern generations of Intel graphics, we can support
these types of operations to do all sorts of graphical operations with
the GPU.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -87,6 +87,7 @@ set(KERNEL_SOURCES
     Graphics/Intel/Plane/DisplayPlane.cpp
     Graphics/Intel/Plane/G33DisplayPlane.cpp
     Graphics/Intel/Transcoder/DisplayTranscoder.cpp
+    Graphics/Intel/VirtualMemory/AddressSpace.cpp
     Graphics/Intel/DisplayConnectorGroup.cpp
     Graphics/Intel/DisplayPortAuxiliaryConnector.cpp
     Graphics/Intel/GMBusConnector.cpp
